Successfully finished function to bring in gifs with appropriate data-still and data-animate properties. Created on click function that selects this gif and sets it from still to animate or vice versa dependent on its current state. Still need to finish download button code and styling.

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,10 @@ h1 {
     line-height: 10%;
 }
 
+.gif-container {
+    margin: auto;
+}
+
 .subtitle {
     margin-top: 25px;
 }
@@ -14,10 +18,16 @@ h1 {
     display: inline;
 }
 
-.gif-image {
+.gif-box {
     display: inline;
     float: left;
     align-content: space-between;
+}
+
+.rating {
+    display: inline-block;
+    clear: both;
+    margin-right: 1em;
 }
 
 .download-btn {
